# OScofo

./: .clang-format  .gitignore  .gitmodules  .ltex-ls  404.html  CITATION.cff  CMakeLists.txt  README.md  editor.js  follower~-help.pd  index.html  mkdocs.yml  pd4web.data  pd4web.js  pd4web.wasm  pyproject.toml  setup.py  styles.css  test.pd  tree-sitter-scofo.wasm  tree-sitter-score.wasm
.github/workflows/: c-cpp.yml  deploy.yml
Documentation/: index.md  score.md
Documentation/Editor/: styles.css
Documentation/score/: actions.md  config.md  events.md  intro.md  lua.md  note.mscz
Editor/: index.html
Editor/patch/: main.pd
Resources/: CHANGELOG.md  Test1.txt  Test2.mscz  Test2.txt  bach.txt  bach2.txt  follower~-tests.pd  o.scofo~-help.pd  test-time.txt
Resources/OScofo/: OScofo.py  audio.py  helpers.py  markov.py  score.py  tempo.py  time.py
Resources/Online-Editor/: CMakeLists.txt  back.html  codemirror.6.65.7.min.css  editor.js  index.html  index.pd  main.cpp  pd4web.data  pd4web.js  pd4web.wasm  styles.css  tree-sitter-scofo.wasm
Resources/Research/: Distancia-Euclidiana.pd  Divergencia-Timbre.pd  Kappa.py  Kull-FFT.pd  Notes.rnote  Pitch-Template.pd  Transition-Prob.ipynb  antescofo.py  bregman.py  descriptors.py  fft-KL-distribuition.py  fft-gausian-dist.py  gaussian-distribuition.py  kl.py  python.py  test.json  viterbi.rnote
Resources/Research/Algorithm-Composition/: Algorithm-Composition.pd  prototipo.py
Resources/Research/Antescofo/: antescofo.py
Resources/Research/BesselFunctions/: CMakeLists.txt  bessel.cpp
Resources/Research/MIR/: onset.pd
Resources/Research/VonMisses/: vonmisses.py
Resources/tests/: bwv-1013.pd  bwv-1013.txt  o.scofo~.maxhelp  test.py
Resources/tree-sitter-scofo/: .prettierrc  grammar.js  package-lock.json  package.json  tree-sitter-scofo.wasm
Resources/tree-sitter-scofo/src/: grammar.json  node-types.json  parser.c
Resources/tree-sitter-score/: grammar.js
Sources/: OScofo.h  OScofo.hpp  descriptors.cpp  follower.cpp  follower.hpp  log.hpp  mdp.cpp  mdp.hpp  mir.cpp  mir.hpp  o.scofo~.cpp  o.scofo~.hpp  score.cpp  score.hpp  states.hpp  utils.cpp
Sources/Max/: CMakeLists.txt  maxlua.cpp  o.scofo~-help.maxpat  o.scofo~.cpp  o.scofo~.maxhelp  oscofo~-help.maxpat
Sources/OScofo/: OScofo.cpp  log.hpp  lua.cpp  mdp.cpp  mdp.hpp  mir.cpp  mir.hpp  score.cpp  score.hpp  states.hpp
Sources/OScofo/tree-sitter-score/: grammar.js  highlight.scm  package.json
Sources/OScofo/tree-sitter-score/src/: grammar.json  node-types.json  parser.c
Sources/PureData/: CMakeLists.txt  o.scofo~.cpp  pdlua.cpp  pdlua.hpp
Sources/Python/: CMakeLists.txt  PyOScofo.cpp
Sources/Python/OScofo/: __init__.py
Tests/: Article.py  OScofo.ipynb  Test0.csv  Test0.txt  Test1-control.csv  Test1.csv  Test1.txt  Test2.mscz  Tests.py  antescofo.pd  follower.py  follower~-tests.pd  oscofo-headless.pd  oscofo-test.pd  oscofo2.pd  pitch-template.py  poisson_hmm.py  score.txt  score2.txt  scoreparse.py  states.py  template.py  templates.py  test.py
Tests/BWV-1007/: main.pd
Tests/BWV-1013/: bwv1013.mscz  expected.csv  main.pd  max.maxpat  pd.pd  result.csv  scf.maxpat  score.scofo.txt  score.txt
Tests/Fragmentos/: Fragmentos.mscz  main.pd  score.scofo.txt
Tests/Scale-C4/: Test1.mscz  pd.pd  result.csv  score.txt
Tests/Scale-C5/: Test1.mscz  expected.csv  result.csv
Tests/Syrinx/: expected.csv  max.maxpat  pd.pd  result.csv  scf.maxpat  score.txt
assets/: oscofopng
extra/: extra.css
score/actions/: index.html
score/config/: index.html
score/events/: index.html
score/intro/: index.html
score/lua/: index.html
search/: search_index.json
